--- a/app/src/main/res/layout/fragment_maps.xml
+++ b/app/src/main/res/layout/fragment_maps.xml
@@ -21,6 +21,7 @@
             android:layout_margin="20sp"
             android:padding="15sp"
             android:textStyle="bold"
+            android:id="@+id/txtBanner"
             android:textColor="@color/purple_700"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
